--- a/creUbuntu/Dockerfile
+++ b/creUbuntu/Dockerfile
@@ -31,6 +31,10 @@ LABEL Name="Ubuntu for CRE" \
       Build_=$CRE_VERSION 
 
 # Install.
+
+RUN apt-get update && apt-get install -y locales && rm -rf /var/lib/apt/lists/* \
+    && localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8
+
 RUN \
   sed -i 's/# \(.*multiverse$\)/\1/g' /etc/apt/sources.list && \
   apt-get update && \
