--- a/crePhpPackages/Dockerfile
+++ b/crePhpPackages/Dockerfile
@@ -80,7 +80,6 @@ RUN composer global require --prefer-stable --update-with-all-dependencies yiiso
 RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-auth-client   
 RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-debug
 RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-gii
-RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-twig
 
 RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/arrays
 RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/strings
@@ -109,6 +108,7 @@ RUN composer global require --prefer-stable --update-with-all-dependencies yiiso
 #RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-core
 #RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-project-template 
 #RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-dev
+#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-twig
 
 RUN composer global install
 #RUN composer global update
