--- a/crePhpPackages/Dockerfile
+++ b/crePhpPackages/Dockerfile
@@ -106,7 +106,7 @@ RUN composer global require --prefer-stable --update-with-all-dependencies yiiso
 #RUN composer global require --prefer-stable --update-with-all-dependencies psr/http-factory-implementation
 
 RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-core
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-project-template 
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-project-template 
 #RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-dev
 #RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-twig
 
