Try test with second container

--- a/crePhpYii3/docker-compose.test.yml
+++ b/crePhpYii3/docker-compose.test.yml
@@ -3,5 +3,10 @@ sut:
   command: /cre/tests/php-yii3-test.sh
   volumes:
     - ./tests:/cre/tests
+  volumes_from: phppack
+
+phppack:
+  image: tamboraorg/crephppackages:2012.0
+  container_name: phppack 
 
 
