--- a/crePhpYii/Dockerfile
+++ b/crePhpYii/Dockerfile
@@ -3,10 +3,20 @@
 FROM tamboraorg/crephppackages:2011.0
 MAINTAINER Michael Kahle <michael.kahle@yahoo.de>
 
+ARG BUILD_YEAR=2011
+ARG BUILD_MONTH=0
+
 ENV DEBIAN_FRONTEND noninteractive
 ENV INITRD No
 #ENV LANG en_US.UTF-8
 ENV YII_VERSION 3.15.5
+
+LABEL Name="Yii2 for CRE" \
+      Year=$BUILD_YEAR \
+      Month=$BUILD_MONTH \
+      Version=$YII_VERSION \
+      OS="Ubuntu:$UBUNTU_VERSION" \
+      Build_=$CRE_VERSION 
 
 RUN mkdir -p /cre && touch /cre/versions.txt && \ 
     echo "$(date +'%F %R') \t crePhpYii \t ${YII_VERSION}" >> /cre/versions.txt 
