--- a/crePhpPackages/Dockerfile
+++ b/crePhpPackages/Dockerfile
@@ -5,10 +5,10 @@
 #
 
 # Pull base image.
-FROM tamboraorg/crephpdev:2011.0
+FROM tamboraorg/crephpdev:2012.0
 MAINTAINER Michael Kahle <michael.kahle@yahoo.de> 
 
-ARG BUILD_YEAR=2011
+ARG BUILD_YEAR=2012
 ARG BUILD_MONTH=0
 
 # Fixes some weird terminal issues such as broken clear / CTRL+L
@@ -32,6 +32,7 @@ RUN composer global config repositories.nmp composer https://asset-packagist.org
 # npm
 RUN composer global require --prefer-stable --update-with-all-dependencies "foxy/foxy"
 RUN composer global require --prefer-stable --update-with-all-dependencies "npm-asset/jquery"
+RUN composer global require --prefer-stable --update-with-all-dependencies npm-asset/bootstrap
 #RUN composer global require --prefer-stable --update-with-all-dependencies "bower-asset/bootstrap"
 
 #RUN composer global require letudiant/composer-shared-package-plugin
@@ -59,58 +60,70 @@ RUN composer global require --prefer-stable --update-with-all-dependencies yiiso
 # yii3
 ## needs php 7.2 AND conflicts with yii2
 
-#RUN composer global require --prefer-stable --update-with-all-dependencies php-extended/php-http-message-factory-psr17
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/log
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/cache
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/di
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/rbac
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/view   
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/db
+RUN composer global require --prefer-stable --update-with-all-dependencies php-extended/php-http-message-factory-psr17
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/log
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/cache
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/di
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/rbac
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/view  
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/db
 
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-base-web
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-base-cli
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-base-api
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-dataview
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-bootstrap4
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-bootstrap3
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-jquery
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-console
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-base-web
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-base-cli
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-base-api
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-dataview
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-bootstrap4
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-bootstrap3
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-jquery
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-console
 
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/log-target-file
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/log-target-db 
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/log-target-file
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/log-target-db 
 
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-dataview 
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-captcha
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-masked-input
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-swiftmailer
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-auth-client   
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-debug
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-gii
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-dataview 
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-captcha
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-masked-input
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-swiftmailer
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-auth-client   
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-debug
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-gii
 
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/arrays
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/strings
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/db-mysql
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/db-sqlite
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/db-mongodb 
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/db-elasticsearch 
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/db-pgsql 
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/mutex  
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/mutex-db-mysql 
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/mutex-db-pgsql 
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/mutex-file 
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-console
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-web
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-rest
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/active-record
-#RUN composer global require --prefer-stable --update-with-all-dependencies ezyang/htmlpurifier
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/arrays
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/strings
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/db-mysql
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/db-sqlite
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/db-mongodb 
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/db-elasticsearch 
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/db-pgsql 
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/mutex  
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/mutex-db-mysql 
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/mutex-db-pgsql 
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/mutex-file 
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-console
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-web
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-rest
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/active-record
+RUN composer global require --prefer-stable --update-with-all-dependencies ezyang/htmlpurifier
 
-#RUN composer global require --prefer-stable --update-with-all-dependencies ext-intl
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/event-dispatcher
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/router
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/router-fastroute
+RUN composer global require --prefer-stable --update-with-all-dependencies ext-intl
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/event-dispatcher
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/router
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/router-fastroute
 
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-core
-#RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-project-template 
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-core
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-project-template 
+
+RUN composer global require --prefer-stable --update-with-all-dependencies vlucas/phpdotenv
+RUN composer global require --prefer-stable --update-with-all-dependencies twig/twig
+RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/var-dumper
+RUN composer global require --prefer-stable --update-with-all-dependencies psr/container
+RUN composer global require --prefer-stable --update-with-all-dependencies psr/container-implementation
+RUN composer global require --prefer-stable --update-with-all-dependencies psr/http-factory
+RUN composer global require --prefer-stable --update-with-all-dependencies psr/http-factory-implementation
+RUN composer global require --prefer-stable --update-with-all-dependencies psr/http-message
+RUN composer global require --prefer-stable --update-with-all-dependencies psr/http-message-implementation
+RUN composer global require --prefer-stable --update-with-all-dependencies psr/http-server-handler
+RUN composer global require --prefer-stable --update-with-all-dependencies psr/http-server-middleware
 
 ##RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-dev
 ##RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii-twig
@@ -120,13 +133,6 @@ RUN composer global require --prefer-stable --update-with-all-dependencies yiiso
 
 RUN composer global install
 RUN composer global update
-
-#for using:
-#RUN composer config minimum-stability dev
-#RUN composer config prefer-stable true
-#RUN composer config repositories path /cre/php/packages 
-#RUN composer config repositories {"type:" "path", "url:" "/cre/php/packages"} 
-#RUN composer config repositories.npm '{"type": "composer", "url": "https://asset-packagist.org"}'
 
 COPY cre /cre
 
