--- a/crePhpPackages/Dockerfile
+++ b/crePhpPackages/Dockerfile
@@ -39,8 +39,10 @@ RUN composer global require --prefer-stable --update-with-all-dependencies npm-a
 #RUN composer global require letudiant/composer-shared-package-plugin
 # yii2
 
-RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-bootstrap
-RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-faker
+### test conflicts....
+
+###RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-bootstrap
+###RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-faker
 # Not loaded from cache ???
 RUN composer global require --prefer-stable --update-with-all-dependencies codeception/base
 RUN composer global require --prefer-stable --update-with-all-dependencies codeception/verify
@@ -51,12 +53,12 @@ RUN composer global require --prefer-stable --update-with-all-dependencies behat
 RUN composer global require --prefer-stable --update-with-all-dependencies phpunit/phpunit
 RUN composer global require --prefer-stable --update-with-all-dependencies phpunit/php-invoker
 RUN composer global require --prefer-stable --update-with-all-dependencies symfony/browser-kit
-RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-queue
-RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-swiftmailer
+###RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-queue
+###RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-swiftmailer
 RUN composer global require --prefer-stable --update-with-all-dependencies true/punycode
-RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-debug 
-RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-gii
-RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-app-basic 
+###RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-debug 
+###RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-gii
+###RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2-app-basic 
 
 #Real conflicts with yii3
 #RUN composer global require --prefer-stable --update-with-all-dependencies yiisoft/yii2
