--- a/crePhpPackages/Dockerfile
+++ b/crePhpPackages/Dockerfile
@@ -31,6 +31,10 @@ RUN composer global config minimum-stability dev
 RUN composer global config prefer-stable true
 RUN composer global config repositories.nmp composer https://asset-packagist.org
 
+RUN echo "Current dir: $(pwd)"
+RUN echo "Cja: $(cat /cre/tmp/php/packages/composer.json)"
+RUN echo "Cjr: $(cat ./composer.json)"
+
 RUN composer config minimum-stability dev
 RUN composer config prefer-stable true
 RUN composer config repositories.nmp composer https://asset-packagist.org
