Copy composer.json instead of creating

--- a/crePhpPackages/Dockerfile
+++ b/crePhpPackages/Dockerfile
@@ -23,7 +23,8 @@ LABEL Name="Php Packages for CRE" \
 
 VOLUME ["/cre/tmp/php/packages"]
 RUN mkdir -p /cre/tmp/php/packages
-RUN echo "{}" > /cre/tmp/php/packages/composer.json
+#RUN echo "{}" > /cre/tmp/php/packages/composer.json
+COPY cre/empty-composer.json /cre/tmp/php/packages/composer.json
 RUN cd /cre/tmp/php/packages
 WORKDIR "/cre/tmp/php/packages"
 
