--- a/crePhpPackages/Dockerfile
+++ b/crePhpPackages/Dockerfile
@@ -38,12 +38,13 @@ RUN echo "Cjr: $(cat ./composer.json)"
 
 RUN composer config minimum-stability dev
 RUN composer config prefer-stable true
-RUN composer config repositories.npm composer https://asset-packagist.org
+#RUN composer config repositories.npm composer https://asset-packagist.org
+RUN composer config repositories.npm '{"type": "composer", "url": "https://asset-packagist.org"}'
 
 # npm
 RUN composer require --prefer-stable --update-with-all-dependencies "foxy/foxy"
 RUN composer global require --prefer-stable --update-with-all-dependencies "npm-asset/jquery"
-RUN composer require --prefer-stable --update-with-all-dependencies npm-asset/bootstrap
+RUN composer global require --prefer-stable --update-with-all-dependencies npm-asset/bootstrap
 #RUN composer require --prefer-stable --update-with-all-dependencies "bower-asset/bootstrap"
 
 #RUN composer require letudiant/composer-shared-package-plugin
